@@ -1,2 +1,21 @@
 # Mood-Based-Game-Recommender
 A simple Java app made with JavaFX which can choose a game for you based on what type of mood you are in
+
+FEATURES:
+- Select a mood (e.g., Bored, Sad)
+- Get a random game recommendation
+- Add your own custom games to any mood category
+
+Run UserInterface.java to start the program.
+
+REQUIRES:
+- Java SDK 11+
+- JavaFX (Same Ver As SDK)
+
+
+TO RUN:
+1.Open CMD/Poweshell Within The Folders Directory
+2.Run [ javac --module-path "(JavaFX Directory Here)" --add-modules javafx.controls *.java ] Within The Terminal To Compile The Project
+3.To Run The App Just Use This Command And Then The App Will Open [ java --module-path "(JavaFX Directory Here)" --add-modules javafx.controls UserInterface ]
+
+Enjoy This Little Project :)
